fix(Hiring ribbon): uncover Modeler Selection
-- moved ribbon 10px to the right side
-- moved Selection 1 stack to the left
-- removed Executor.js entry from docpad.conf
-- reduced box size of the ribbon (much more invisible space was used than
needed

Closes: #CAM-1488

--- a/site/src/files/assets/css/small.css
+++ b/site/src/files/assets/css/small.css
@@ -3,7 +3,7 @@
   .hiring-ribbon {
     position: fixed;
     top: 40px;
-    right: 0;
+    right: -10px;
     border: 0;
     display: inline;
     visibility: visible;
